@@ -32,6 +32,7 @@ Minor features
  * Added new EmailBlock and IntegerBlock (Oktay Altay)
  * Added a new FloatBlock, DecimalBlock and a RegexBlock (Oktay Altay, Andy Babic)
  * Wagtail version number is now shown on the settings menu (Chris Rogers)
+ * Added a system check to validate that fields listed in ``search_fields`` are defined on the model (Josh Schneier)
 
 
 Bug fixes
